--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ body {
     padding-top: 30px;
     padding-bottom: 15px;
     color: white;
-    width: 885px;
+    width: 90%;
     background-color: #1b213b;
     padding-left: 18px;
 }
